# quantro

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  alembic.ini  create_test_user.py  debug_login.py  fix_user_email.py  pyproject.toml  quick_test_user.py  reset_database.py  setup_database.py  test_api_login.py
alembic/: env.py
alembic/versions/: 2025_07_25_0202-b8769e3f7839_initial_migration_with_user_market_and_.py  2025_07_25_0222-ae3707d3de9a_prepare_tables_for_timescaledb_.py  2025_07_26_1211-ed0ae431317f_add_security_fields_to_user_model_and_.py  2025_07_28_1256-2502a3f3b67c_initial_migration.py  2025_07_28_1301-13b999375bcc_fix_foreign_key_relationships.py  2025_07_29_0022-c2bcd7944f96_enhance_market_data_models_with_.py
app/: __init__.py  main.py
app/api/: __init__.py  auth.py  health.py
app/backtesting/: __init__.py  charts.py  engine.py  metrics.py  models.py
app/core/: config.py  database.py  middleware.py  security.py  timescaledb.py
app/data_providers/: __init__.py  base.py  ccxt_provider.py  manager.py  set_provider.py
app/models/: __init__.py  market.py  trading.py  user.py
app/schemas/: __init__.py  auth.py  market.py  trading.py
app/strategies/: __init__.py  base.py  cdc_action_zone.py  manager.py
app/utils/: database.py  indicators.py  validation.py
frontend/static/css/: main.css
frontend/templates/: base.html  dashboard.html  login.html
tests/: __init__.py  conftest.py  test_backtesting_engine.py  test_backtesting_metrics.py  test_backtesting_models.py  test_cdc_action_zone.py  test_data_providers.py  test_database_performance.py  test_frontend_auth.py  test_health.py  test_indicators.py  test_models_market.py  test_models_trading.py  test_security.py  test_strategies_base.py  test_strategies_manager.py  test_timescaledb.py
(+4 files in other folders)
