[project]
name = "quantro"
version = "0.1.0"
description = "Lightweight trading platform with backtesting capabilities"
authors = [{name = "Ekachai Suriyakriengkri", email = "dev@quantro.local"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.6.1",
    "sqlalchemy[asyncio]>=2.0.41",
    "alembic>=1.16.4",
    "backtesting>=0.6.4",
    "ccxt>=4.4.95",
    "pytest>=8.4.1",
    "loguru>=0.7.3",
    "pyjwt[cryptography]>=2.10.1",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "uvicorn>=0.35.0",
    "psycopg[binary,pool]>=3.2.9",
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "httpx>=0.28.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.4",
    "mypy>=1.17.0",
    "pre-commit>=3.6.0",
]
redis = ["redis>=6.2.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["UP017"]  # Allow timezone.utc instead of datetime.UTC for compatibility

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]  # Ignore line length in Alembic migration files

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
exclude = [
    "alembic/",
]
